Create ShamirSecretRecovery.java